# plonk-verifier-rust

./: Cargo.toml  proof.json  public.json  sample_proof.txt  verificationkey.json  verifier.sol
data/: proof.json
src/: utils.rs  verifier.rs
